# rn-fast-image-base64

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  package-lock.json  package.json  rn-fast-image-base64.podspec  tsconfig.json  turbo.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnfastimagebase64/: ImageUtils.java  RnFastImageBase64Module.java  RnFastImageBase64Package.java
android/src/newarch/: RnFastImageBase64Spec.java
android/src/oldarch/: RnFastImageBase64Spec.java
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/rnfastimagebase64example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/RnFastImageBase64Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RnFastImageBase64Example.xcodeproj/: project.pbxproj
example/ios/RnFastImageBase64Example.xcodeproj/xcshareddata/xcschemes/: RnFastImageBase64Example.xcscheme
example/ios/RnFastImageBase64ExampleTests/: RnFastImageBase64ExampleTests.m
example/src/: App.tsx
ios/: RnFastImageBase64.h  RnFastImageBase64.mm  YeetJSIUtils.h  YeetJSIUtils.mm
src/: NativeRnFastImageBase64.ts  index.tsx
